--- a/package.json
+++ b/package.json
@@ -58,7 +58,17 @@
 		],
 		"globals": {
 			"STORE_URL": "http://localhost:8802"
-		}
+		},
+		"reporters": [
+			"default",
+			[
+				"jest-html-reporters",
+				{
+					"publicPath": "./artifacts",
+					"filename": "report.html"
+				}
+			]
+		]
 	},
 	"config": {
 		"wp_org_slug": "storefront",
@@ -90,6 +100,7 @@
 		"eslint-plugin-import": "2.29.1",
 		"github-label-sync": "2.3.1",
 		"jest-puppeteer": "10.1.0",
+		"jest-html-reporters": "^3.1.7",
 		"lodash": "4.17.21",
 		"node-wp-i18n": "1.2.7",
 		"onchange": "7.1.0",
