--- a/.github/workflows/php-coding-standards.yml
+++ b/.github/workflows/php-coding-standards.yml
@@ -42,7 +42,7 @@ jobs:
                   restore-keys: |
                       ${{ runner.os }}-composer-
             - name: Set up PHP
-              uses: shivammathur/setup-php@v2
+              uses: shivammathur/setup-php@0f7f1d08e3e32076e51cae65eb0b0c871405b16e # v2.24.1
               with:
                   php-version: '7.4'
                   coverage: none
