--- a/composer.json
+++ b/composer.json
@@ -34,12 +34,14 @@
 		]
 	},
 	"require-dev": {
+		"phpunit/phpunit": "^9.6",
 		"squizlabs/php_codesniffer": "3.7.1",
 		"wp-coding-standards/wpcs": "2.3.0",
 		"woocommerce/woocommerce-sniffs": "0.1.3",
 		"phpcompatibility/php-compatibility": "9.3.5",
 		"woocommerce/woocommerce-git-hooks": "1.0.5",
-		"dealerdirect/phpcodesniffer-composer-installer": "0.7.2"
+		"dealerdirect/phpcodesniffer-composer-installer": "0.7.2",
+		"yoast/phpunit-polyfills": "^3.1"
 	},
 	"scripts": {
 		"pre-update-cmd": [
